--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Instalar dependências
-        run: npm install
+        run: npm install --legacy-peer-deps
+
 
       - name: Construir o projeto
         run: npm run build
