--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,6 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: build/  
-          server-dir: public_html  
+          server-dir: public_html/  
           exclude: |
-            **/node_modules/**
-            **/.git/**
-            **/.github/**
             **/public/** 
